# ai-agent-practice

./: .gitignore  LICENSE  pyproject.toml
resources/created/: snakegame.py
resources/extra/: seen_movies.txt
resources/semantic_kernel/plugins/MovieRecommender/recommend_movie/: Recommend_Movies.yaml  Recommend_Movies2.yaml
resources/text/: ai_news_1.txt
src/samples/: langchain_default.py  ollama_serving.py
src/samples/agent_tools/: call_tools.py  movie_chat.py  semantic_kernal_practice.py  tmdb_plugin_test.py
src/samples/agent_tools/plugins/: tmdb.py
src/samples/autogen_practice/: autogen_coding_agent.py  autogetn_start.py
src/samples/crewai_practice/: coding_agent.py  coding_agent2.py  simple_code_creator.py
src/samples/prompt_flow/connections/: ollama.yaml
src/samples/prompt_flow/simple/: flow.dag.yaml
src/samples/prompts_tactics/: use_delimiters.py  use_example.py  use_personas.py  use_steps.py
src/samples/websocket/: simple_websocket_client.py  simple_websocket_server.py
