[project]
name = "ai-agent-practice"
version = "0.1.0"
description = "All kind of practicies with ai agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen>=0.9.7",
    "autogen-agentchat>=0.7.2",
    "chromadb>=1.0.15",
    "crewai>=0.159.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "openai>=1.99.5",
    "promptflow>=1.18.1",
    "promptflow-tools>=1.6.1",
    "pygame>=2.6.1",
    "requests>=2.32.4",
    "semantic-kernel[ollama]>=1.35.3",
    "sentence-transformers>=5.1.0",
]
